fixed issue - spacing on ogin page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: lightgray; */
+  margin: 0;
 }
 
 html,
